--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="pics/ding.jpg"><img style="width:90%;max-width:90%" alt="profile photo" src="pics/yunchen.jpg" class="hoverZoomLink"></a>
+              <a href="pics/ding.jpg"><img style="width:90%;max-width:90%" alt="profile photo" src="pics/ding.jpg" class="hoverZoomLink"></a>
                 <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Email: 
                 <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ycding@gapp.nthu.edu.tw
             </td>
