--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <name>Yu-Chun Ding</name>&nbsp&nbsp;
               </p>
               <p>I am currently at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interests include algorithm exploration, energy-efficient computing architecture design, and digital VLSI system implementation for embedded vision applications. </p>
-              <p>I am the first author of a top conference paper for solid-state circuits implementation (ESSCIRC'22). I am also the co-author of several top conference and journal papers (ISICAS'22, TCASI'22, TCASI'21, ICASSP'20, MICRO'19). I have been involved in several chip tape-outs and have established several real-time silicon demonstration platforms. </p>
+              <p>I am the first author of a top conference paper for solid-state circuits (ESSCIRC'22). I am also the co-author of several top conference and journal papers (ISICAS'22, TCASI'22, TCASI'21, ICASSP'20, MICRO'19). I have been involved in several integrated circuit tape-outs, and have established several real-time silicon demonstration platforms. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
                 <!-- <a href="data/CV_Zishen_Wan.pdf">CV</a> &nbsp/&nbsp -->
-                <a href="https://www.linkedin.com/in/yu-chun-ding-500001133/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/yu-chun-ding-500001133/">LinkedIn</a> 
                 <!-- <a href="https://github.com/yunchenlo">GitHub</a> -->
               </p>
             </td>
