--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <name>Yu-Chun Ding</name>&nbsp&nbsp;
               </p>
-              <p>I am currently at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interests include algorithm exploration, energy-efficient computing architecture design, and digital VLSI system implementation for embedded vision applications. </p>
+              <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interests include algorithm exploration, energy-efficient computing architecture design, and digital VLSI system implementation for embedded vision applications. </p>
               <p>I am the first author of a top conference paper (ESSCIRC'22) and also the co-author of several top conference and journal papers (ISICAS'22, TCASI'22, TCASI'21, ICASSP'20, MICRO'19). I have been involved in several integrated circuit tape-outs, and have experience in establishing real-time silicon demonstration and emulation platforms. </p>
               </p>
               <p style="text-align:center">
