--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 
 
-  <title>Yu-Chun Ding</title>
+  <title>Yu-Chun Ding (丁友鈞) </title>
   
   <meta name="author" content="Yu-Chun Ding">
   <meta name="viewport" content="width=device-width, initial-scale=1">
