--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <br>
                     <em> IEEE International Solid-State Circuits Conference Student Research Preview (<strong>ISSCC SRP </strong>)</em>, 2021
                    <br>
-                  (Top Conference of Solid-State Circuits)
+                  </em><strong> (Top Conference of Solid-State Circuits)</strong></em>
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
