--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <title>Yu-Chun Ding (丁友鈞) </title>
   
-  <meta name="author" content="Yu-Chun Ding">
+  <meta name="author" content="Yu-Chun Ding (丁友鈞) ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
