--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <br>
                     <em> IEEE/ACM International Symposium on Microarchitecture (<strong>MICRO</strong>)</em>, 2019
                    <br>
-                  (Top Conference of Computer Architecture)
+                  <em><strong> (Top Conference of Computer Architecture) <strong><em>
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
