--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <br>
                     <em> IEEE International Solid-State Circuits Conference Student Research Preview (<strong>ISSCC SRP </strong>)</em>, 2021
                    <br>
-                  </em><strong> (Top Conference of Solid-State Circuits)</strong></em>
+                  <em><strong> (Top Conference of Solid-State Circuits)</strong></em>
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -220,7 +220,7 @@
                     <br>
                     <em> IEEE/ACM International Symposium on Microarchitecture (<strong>MICRO</strong>)</em>, 2019
                    <br>
-                  <em><strong> (Top Conference of Computer Architecture) <strong><em>
+                  <em><strong> (Top Conference of Computer Architecture) </strong></em>
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
