--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <name>Yu-Chun Ding</name>&nbsp&nbsp;
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interests include algorithm exploration, energy-efficient computing architecture design, and digital VLSI system implementation for high-performance embedded vision applications. </p>
-              <p>I am the first author of a top conference paper (ESSCIRC'22) and also the co-author of several top conference and journal papers (ISICAS'22, TCASI'22, TCASI'21, ICASSP'20, MICRO'19). I have been involved in several integrated circuit tape-outs, and have experience in establishing real-time silicon demonstration platforms. </p>
+              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in several integrated circuit tape-outs, and have experience in establishing real-time silicon demonstration platforms. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
@@ -74,7 +74,7 @@
                     <br>
                     <em> IEEE Transactions on circuits and systems—I: regular papers (<strong> TCASI </strong>)</em>, 2022
                    <br>
-                  <em><strong>(Top Journal of Circuits and Systems)</strong></em>
+                  <! -- <em><strong>(Top Journal of Circuits and Systems)</strong></em> --> 
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -93,7 +93,7 @@
                     <br>
                     <em> IEEE International Symposium on Integrated Circuits and Systems (<strong> ISICAS </strong>)</em>, 2022
                    <br>
-                  <em><strong>(Top Conference of Circuits and Systems)</strong></em>
+                  <! --  <em><strong>(Top Conference of Circuits and Systems)</strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -108,7 +108,7 @@
                     <br>
                     <em> IEEE European Solid-State Circuits Conference (<strong>ESSCIRC</strong>)</em>, 2022
                    <br>
-                  <em><strong>(Top Conference of Solid-State Circuits)</strong></em>
+                  <! -- <em><strong>(Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -123,7 +123,7 @@
                     <br>
                     <em> IEEE Transactions on circuits and systems—I: regular papers (<strong> TCASI </strong>)</em>, 2021
                    <br>
-                  <em><strong>(Top Journal of Circuits and Systems)</strong></em>
+                  <! -- <em><strong>(Top Journal of Circuits and Systems)</strong></em> -->
                   <br>
                   <p></p>
                 </td>
@@ -148,13 +148,13 @@
                   </script>
                 </td> -->
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                      <papertitle> CNN Model and Architecture Co-optimization. </papertitle>
+                      <papertitle> CNN Model and Architecture Co-optimization </papertitle>
                     <br>
                     <strong> Yu-Chun Ding </strong>
                     <br>
                     <em> IEEE International Solid-State Circuits Conference Student Research Preview (<strong>ISSCC SRP </strong>)</em>, 2021
                    <br>
-                  <em><strong> (Top Conference of Solid-State Circuits)</strong></em>
+                  <! -- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -186,7 +186,7 @@
                     <br>
                     <em>IEEE International Conference on Acoustics, Speech and Signal Processing (<strong>ICASSP </strong>)</em>, 2020
                    <br>
-                  <em><strong>(Top Conference of Signal Processing)</strong></em>
+                  <! -- <em><strong>(Top Conference of Signal Processing)</strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
@@ -220,7 +220,7 @@
                     <br>
                     <em> IEEE/ACM International Symposium on Microarchitecture (<strong>MICRO</strong>)</em>, 2019
                    <br>
-                  <em><strong> (Top Conference of Computer Architecture) </strong></em>
+                  <! -- <em><strong> (Top Conference of Computer Architecture) </strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
