--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <!-- <em><strong>(Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
                   <p></p>
-                  <!-- <p>We explore the </p> -->
+                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> FPGA-aided Silicon Chip Demonstration </a> </p> 
                 </td>
               </tr> 
 
@@ -216,7 +216,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>  
           <li> 2023 NOVATEK Doctor Fellowship, Novatek Microelectronics Corporation </li>
-          <li> 2023 Golden Prize, 23rd Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
+          <li> 2023 Golden Award and Best Idea Award, 23rd Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
           <li> 2022 NOVATEK Doctor Fellowship, Novatek Microelectronics Corporation </li>
  				  <li> 2022 Student Travel Grant, IEEE Circuits and Systems Society (CASS) </li>
           <li> 2022 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
@@ -226,7 +226,7 @@
           <li> 2020 Second Prize, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
           <li> 2020 The Phi Tau Phi Scholastic Honor Society of the Republic of China Membership </li>
           <li> 2020 Special Award for Award-Winning Papers in International Conferences, National Tsing Hua University </li>
-          <li> 2020 Honorable Mention, 20rd Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
+          <li> 2020 Honorable Mention Award, 20th Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
           <li> 2018  Third Prize, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
    				</ul>
               </td>
