--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <name>Yu-Chun Ding</name>&nbsp&nbsp;
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interests include algorithm exploration, energy-efficient computing architecture design, and digital VLSI system implementation for high-performance embedded vision applications. </p>
-              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in several integrated circuit tape-outs, and have experience in establishing real-time silicon demonstration platforms. </p>
+              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in several VLSI circuit tape-outs, and have experience in establishing real-time silicon demonstration platforms. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
