--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <strong> Yu-Chun Ding </strong>, Kai-Pin Lin, Chi-Wen Weng, Li-Wei Wang, Huan-Ching Wang, Chun-Yeh Lin, Yong-Tai Chen, and Chao-Tsung Huang
                     <br>
                     <em> IEEE European Solid-State Circuits Conference (<strong>ESSCIRC</strong>)</em>, 2022
-                    <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> FPGA-aided Silicon Chip Demonstration </a> </p>  
+                  <br>  
+                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video Record of the FPGA-aided Chip Demonstration System </a> </p>  
                   <br>
                   <!-- <em><strong>(Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
