--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
  				  <li> 2022 Student Travel Grant, IEEE Circuits and Systems Society (CASS) </li>
           <li> 2022 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
           <li> 2022 Oustanding Chip Design Award (Digital/AI), Taiwan Semiconductor Research Institute (TSRI) </li>
-          <li> 2022  First Prize, Cell-based Digital Circuit Design Category, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
-          <li> 2021  Third Prize, Cell-based Digital Circuit Design Category, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
-          <li> 2020 Second Prize, Cell-based Digital Circuit Design Category, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
+          <li> 2022  First Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
+          <li> 2021  Third Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
+          <li> 2020 Second Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
           <li> 2020 The Phi Tau Phi Scholastic Honor Society of the Republic of China Membership </li>
           <li> 2020 Special Award for Award-Winning Papers in International Conferences, National Tsing Hua University </li>
           <li> 2020 Honorable Mention Award, 20th Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
-          <li> 2018  Third Prize, Cell-based Digital Circuit Design Category, National Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
+          <li> 2018  Third Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
    				</ul>
               </td>
             </tr>
