--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interest lies in the investigation of hardware-friendly algorithms, the design of energy-efficient computing architectures, and the implementation of high-performance digital VLSI systems, particularly aimed at achieving superior quality within embedded vision applications. </p>
-              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in establishing several real-time silicon demonstration platforms, and also have experience in digital VLSI circuits tape-out. </p>
+              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in establishing several real-time chip/FPGA demonstration platforms, and also have experience in digital VLSI circuits tape-out. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
@@ -73,9 +73,9 @@
                   Wei-Chen Lin, Wei-Jyun Chen, Shu-Yun Wu, Chao-Tsung Huang, Chun-Yeh Lin, Chia-Yu Chang, Meng-Jui Lee, 
                   Shimazu Tatsunori, Tsung Chen, Fan-Yi Lin, and Yuan-Hao Huang
                     <br>
-                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong> TCAS-I </strong>)</em>, 2022
+                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong>TCAS-I</strong>)</em>, 2022
                    <br>
-                  <em> IEEE International Symposium on Integrated Circuits and Systems (<strong> ISICAS </strong>)</em>, 2022
+                  <em> IEEE International Symposium on Integrated Circuits and Systems (<strong>ISICAS</strong>)</em>, 2022
                   <br>
                   <!-- <em><strong>(Top Journal of Circuits and Systems)</strong></em> --> 
                   <br>
@@ -106,7 +106,7 @@
                     <br>
                     Ching-Chen Wang, <strong> Yu-Chun Ding </strong>, Ching-Te Chiu, Chao-Tsung Huang, Yen-Yu Cheng, Shih-Yi Sun, Chih-Han Cheng, and Hsueh-Kai Kuo 
                     <br>
-                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong> TCAS-I </strong>)</em>, 2021
+                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong>TCAS-I</strong>)</em>, 2021
                    <br>
                   <!-- <em><strong>(Top Journal of Circuits and Systems)</strong></em> -->
                   <br>
@@ -137,7 +137,7 @@
                     <br>
                     <strong> Yu-Chun Ding </strong>
                     <br>
-                    <em> IEEE International Solid-State Circuits Conference Student Research Preview (<strong>ISSCC SRP </strong>)</em>, 2021
+                    <em> IEEE International Solid-State Circuits Conference Student Research Preview (<strong>ISSCC SRP</strong>)</em>, 2021
                    <br>
                   <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
@@ -169,7 +169,7 @@
                     <br>
                     Ching-Chen Wang, Ching-Te Chiu, Chao-Tsung Huang, <strong> Yu-Chun Ding </strong>, and Li-Wei Wang
                     <br>
-                    <em>IEEE International Conference on Acoustics, Speech and Signal Processing (<strong>ICASSP </strong>)</em>, 2020
+                    <em>IEEE International Conference on Acoustics, Speech and Signal Processing (<strong>ICASSP</strong>)</em>, 2020
                    <br>
                   <!-- <em><strong>(Top Conference of Signal Processing)</strong></em> -->
                   <br>
