--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>  
               <br>
-          <li> 2023 NOVATEK Doctor Fellowship, Novatek Microelectronics Corporation </li>
+          <li> 2023 NOVATEK Doctoral Scholarship, Novatek Microelectronics Corporation </li>
           <li> 2023 Golden Award and Best Idea Award, 23rd Macronix Golden Silicon Awards, Macronix International Corporation (MXIC) </li>
-          <li> 2022 NOVATEK Doctor Fellowship, Novatek Microelectronics Corporation </li>
+          <li> 2022 NOVATEK Doctor Scholarship, Novatek Microelectronics Corporation </li>
  				  <li> 2022 Student Travel Grant, IEEE Circuits and Systems Society (CASS) </li>
           <li> 2022 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
           <li> 2022 Oustanding Chip Design Award (Digital/AI), Taiwan Semiconductor Research Institute (TSRI) </li>
