--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>  
               <br>
-          <li> 2023 Gold Metal Award and Best Idea Award, 23rd Macronix Golden Silicon Awards, Macronix Education Fundation, Macronix International Corporation  </li>
-          <li> 2023 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics Corporation </li>
-          <li> 2022 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics Corporation </li>
+          <li> 2023 Gold Metal Award and Best Idea Award, 23rd Macronix Golden Silicon Awards, Macronix Education Fundation, Macronix (MXIC)  </li>
+          <li> 2023 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics </li>
+          <li> 2022 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics </li>
  				  <li> 2022 Student Travel Grant, IEEE Circuits and Systems Society (CASS) </li>
           <li> 2022 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
           <li> 2022 Oustanding Chip Design Award (Digital/AI), Taiwan Semiconductor Research Institute (TSRI) </li>
@@ -229,7 +229,7 @@
           <li> 2020 Second Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
           <li> 2020 The Phi Tau Phi Scholastic Honor Society of the Republic of China Membership </li>
           <li> 2020 Special Award for Award-Winning Papers in International Conferences, National Tsing Hua University </li>
-          <li> 2020 Honorable Mention Award, 20th Macronix Golden Silicon Awards, Macronix Education Fundation, Macronix International Corporation </li>
+          <li> 2020 Honorable Mention Award, 20th Macronix Golden Silicon Awards, Macronix Education Fundation, Macronix (MXIC) </li>
           <li> 2018  Third Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
    				</ul>
               </td>
