--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+   <tr onmouseout="ff_stop()" onmouseover="ff_start()">
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                      <papertitle> CINE: A 4K-UHD Energy-Efficient Computational Imaging Neural Engine with Overlapped Stripe Inference and Structure-Sparse Kernel  </papertitle>
+                    <br>
+                  Kai-Pin Lin,   
+                  <strong>Yu-Chun Ding</strong>, Chun-Yeh Lin, Yong-Tai Chen, and Chao-Tsung Huang
+                    <br>
+                    <em> IEEE Solid-State Circuits Letters (<strong>SSC-L</strong>)</em>, accepted
+                   <br>
+                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video Record of the FPGA-aided Chip Demonstration System </a> </p>  
+                  <br>
+                  <!-- <em><strong>(Top Journal of Solid-State Circuits)</strong></em> --> 
+                  <br>
+                  <p></p>
+                  <!-- <p>We explore the </p> -->
+                </td>
+              </tr> 
     <tr onmouseout="ff_stop()" onmouseover="ff_start()">
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> Chaos LiDAR Based RGB-D Face Classification System with Embedded CNN Accelerator on FPGAs </papertitle>
