--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> CINE: A 4K-UHD Energy-Efficient Computational Imaging Neural Engine with Overlapped Stripe Inference and Structure-Sparse Kernel  </papertitle>
                     <br>
-                  Kai-Pin Lin,   
-                  <strong>Yu-Chun Ding</strong>, Chun-Yeh Lin, Yong-Tai Chen, and Chao-Tsung Huang
+                    Kai-Pin Lin, <strong>Yu-Chun Ding</strong>, Chun-Yeh Lin, Yong-Tai Chen, and Chao-Tsung Huang
                     <br>
                     <em> IEEE Solid-State Circuits Letters (<strong>SSC-L</strong>)</em>, accepted
                    <br>
