--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interest lies in the investigation of hardware-friendly algorithms, the design of energy-efficient computing architectures, and the implementation of high-performance digital VLSI systems, particularly aimed at achieving superior quality within embedded vision applications. </p>
-              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in establishing multiple real-time chip/FPGA demonstration platforms, and also have experience in digital VLSI circuits tape-out. </p>
+              <p>I am the first author of a top conference paper and also the co-author of several top conferences and journal papers. I have been involved in establishing multiple real-time chip/FPGA demonstration platforms, and also have experience in digital VLSI circuits tape-out. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
