--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <br>
                     Kai-Pin Lin, <strong>Yu-Chun Ding</strong>, Chun-Yeh Lin, Yong-Tai Chen, and Chao-Tsung Huang
                     <br>
-                    <em> IEEE Solid-State Circuits Letters (<strong>SSC-L</strong>)</em>, early access
+                    <em> IEEE Solid-State Circuits Letters (<strong>SSC-L</strong>)</em>, 2024
                    <br>
                   <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video Record of the FPGA-aided Chip Demonstration System </a> </p>  
                   <br>
