--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr onmouseout="ff_stop()" onmouseover="ff_start()">
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                      <papertitle> A 16nm 5.7TOPS CNN Processor Supporting Bi-Directional FPN for Small-Object Detection on High-Resolution Videos  </papertitle>
+                    <br>
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Chun-Yeh Lin, Hui-Yun Tsai, Hao-Jiun Tu, Kai-Feng Chang, Yu-Ching Su, Tsung-Han Hsieh, Yu-Kuan Jian, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, Chao-Tsung Huang
 
+                    <br>
+                    <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025
+                   <br>
+                  <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
+                  <br>
+                  <p></p>
+                  <!-- <p>We explore the </p> -->
+                </td>
+              </tr> 
    <tr onmouseout="ff_stop()" onmouseover="ff_start()">
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> CINE: A 4K-UHD Energy-Efficient Computational Imaging Neural Engine with Overlapped Stripe Inference and Structure-Sparse Kernel  </papertitle>
