--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
                   <!-- <p>We explore the </p> -->
                 </td>
               </tr> 
+  <tr onmouseout="ff_stop()" onmouseover="ff_start()">
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                      <papertitle> High-Fidelity Depth Map Reconstruction System With RGB-Guided Super Resolution CNN and Cross-Calibrated Chaos LiDAR  </papertitle>
+                    <br>
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Pei-Rong Li, Chao-Tsung Huang, Yung-Chen Lin, Tsung Chen, Wei-Lun Lin, Cheng-Ting Lee, Fan-Yi Lin, Yuan-Hao Huang
+                    <br>
+                    <em> IEEE Access </em>, 2025
+                   <br>
+                  <!-- <em><strong> (Open Access Journal)</strong></em> -->
+                  <br>
+                  <p></p>
+                  <!-- <p>We explore the </p> -->
+                </td>
+              </tr> 
    <tr onmouseout="ff_stop()" onmouseover="ff_start()">
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> CINE: A 4K-UHD Energy-Efficient Computational Imaging Neural Engine with Overlapped Stripe Inference and Structure-Sparse Kernel  </papertitle>
