--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                    <br>
                   <em> IEEE International Symposium on Integrated Circuits and Systems (<strong>ISICAS</strong>)</em>, 2022
                   <br>
+                  <p> <a href="https://www.youtube.com/watch?v=6t9IT4EDdBw"> Pre-recorded video for the presentation in ISICAS 2022 </a> </p> 
                   <!-- <em><strong>(Top Journal of Circuits and Systems)</strong></em> --> 
                   <br>
                   <p></p>
@@ -151,6 +152,8 @@
                     Ching-Chen Wang, <strong>Yu-Chun Ding</strong>, Ching-Te Chiu, Chao-Tsung Huang, Yen-Yu Cheng, Shih-Yi Sun, Chih-Han Cheng, and Hsueh-Kai Kuo 
                     <br>
                     <em> IEEE Transactions on circuits and systems—I: regular papers (<strong>TCAS-I</strong>)</em>, 2021
+                   <br>
+                  <p> <a href="https://www.youtube.com/watch?v=rANsdqSMz-g"> Pre-recorded video for the invited presentation in the 2022 VLSI Design/CAD Symposium </a> </p> 
                    <br>
                   <!-- <em><strong>(Top Journal of Circuits and Systems)</strong></em> -->
                   <br>
