--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <br>
                     <em> IEEE Solid-State Circuits Letters (<strong>SSC-L</strong>)</em>, 2024
                    <br>
-                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video Record of the FPGA-aided Chip Demonstration System </a> </p>  
+                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video record of the FPGA-aided chip demonstration system </a> </p>  
                   <br>
                   <!-- <em><strong>(Top Journal of Solid-State Circuits)</strong></em> --> 
                   <br>
@@ -137,7 +137,7 @@
                     <br>
                     <em> IEEE European Solid-State Circuits Conference (<strong>ESSCIRC</strong>)</em>, 2022
                   <br>  
-                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video Record of the FPGA-aided Chip Demonstration System </a> </p>  
+                  <p> <a href="https://www.youtube.com/watch?v=tbUY5wKj8C0"> Video record of the FPGA-aided chip demonstration system </a> </p>  
                   <br>
                   <!-- <em><strong>(Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
