--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <br>
                     <em> IEEE Access</em>, 2025
                    <br>
-                  <!-- <em><strong> (Open Access Journal)</strong></em> -->
+                  <!-- <em><strong> (Multidisciplinary Open Access Journal)</strong></em> -->
                   <br>
                   <p></p>
                   <!-- <p>We explore the </p> -->
