--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
               <p style="text-align:center">
                 <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
               </p>
-              <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. My research interest lies in the investigation of hardware-friendly algorithms, the design of energy-efficient computing architectures, and the implementation of high-performance digital VLSI systems, particularly aimed at achieving superior quality within embedded vision applications. </p>
-              <p>I am the first author of two top conference papers (ISSCC and ESSCIRC) and the co-author of several conferences and journal papers. I have been involved in establishing multiple real-time chip/FPGA demonstration platforms, and also have experience in digital VLSI circuits tape-out. </p>
+              <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
+                My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep-learning applications. </p>
+              <p>I am the first author of two top conference papers (ISSCC, ESSCIRC) and a co-author of several prestigious conference (MICRO, ISICAS) and journal papers (TCAS-I, SSC-L). I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
