--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
-                My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep-learning applications. </p>
+                My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
               <p>I am the first author of two top conference papers (ISSCC, ESSCIRC) and a co-author of several prestigious conference (MICRO, ISICAS) and journal papers (TCAS-I, SSC-L). I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
@@ -266,6 +266,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>  
               <br>
+          <li> 2025 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
           <li> 2024 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics </li>
           <li> 2023 Gold Metal Award and Best Creativity Award, 23rd Macronix Golden Silicon Awards, Macronix Education Foundation </li>
           <li> 2023 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics </li>
@@ -291,7 +292,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last Update: Jan. 2025
+                Last Update: Mar. 2025
                 <br><br>
                 <a href="https://github.com/jonbarron/website">Website Template</a>
                 </p>
