--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
-              <p>I am the first author of two top conference papers (ISSCC, ESSCIRC) and a co-author of several prestigious conference (MICRO, ISICAS) and journal papers (TCAS-I, SSC-L). I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
+              <p>I am the first author of two flagship conference papers (ISSCC, ESSCIRC) and a co-author of several prestigious conference (MICRO, ISICAS) and journal papers (TCAS-I, SSC-L). I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
