--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
-              <p>I have authored two first-author papers at ISSCC and ESSCIRC, and contributed to top-ranking conferences and journals such as MICRO, ISICAS, TCAS-I, and SSC-L. Additionally, I possess significant hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and leading digital VLSI tape-out projects in 40nm and 16nm technology nodes. </p>
+              <p>My publications include two first-author papers at ISSCC and ESSCIRC and co-authored works in MICRO, ISICAS, TCAS-I, and SSC-L. I also have practical experience developing real-time chip and FPGA SoC platforms and leading digital VLSI tape-out projects in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
