--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 
                     <br>
                     <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025
+                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> </p>  
+                  <br>
                    <br>
                   <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
                   <br>
