--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
-              <p>My publications include two first-author papers at ISSCC and ESSCIRC and co-authored works in MICRO, ISICAS, TCAS-I, and SSC-L. I also have practical experience developing real-time chip and FPGA SoC platforms and leading digital VLSI tape-out projects in 40nm and 16nm. </p>
+              <p>My publications include two first-author papers in ISSCC and ESSCIRC and co-authored works in MICRO, ISICAS, TCAS-I, and SSC-L. I also have practical experience developing real-time chip and FPGA SoC platforms and leading digital VLSI tape-out projects in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
@@ -72,7 +72,7 @@
 
                     <br>
                     <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025
-                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> </p>  
+                  <p> Invited to attend the ISSCC 2025 demonstration session, <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> </p>  
                   <br>
                    <br>
                   <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
