--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                     <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Chun-Yeh Lin, Hui-Yun Tsai, Hao-Jiun Tu, Kai-Feng Chang, Yu-Ching Su, Tsung-Han Hsieh, Yu-Kuan Jian, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, Chao-Tsung Huang
 
                     <br>
-                    <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025
-                  <p> Invited to attend the ISSCC 2025 demonstration session, <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> </p>  
+                    <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025 
+                    
+                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> (Invited to attend the ISSCC 2025 demonstration session) </p>  
                   <br>
                    <br>
                   <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
