--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <br>
                     <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025 
                     
-                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> (Invited to attend the ISSCC 2025 demonstration session) </p>  
+                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> (Invited to attend the Demonstration Session in ISSCC 2025) </p>  
                   <br>
                    <br>
                   <!-- <em><strong> (Top Conference of Solid-State Circuits)</strong></em> -->
