--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>  
               <br>
+          <li> 2025 Honorable Mention Award, 25th Macronix Golden Silicon Awards, Macronix Education Fundation </li>
           <li> 2025 Outstanding Students Conference Travel Grant, Foundation For The Advancement of Outstanding Scholarship (FAOS) </li>
           <li> 2024 NOVATEK Doctoral Scholarship, Novatek Education Foundation, Novatek Microelectronics </li>
           <li> 2023 Gold Metal Award and Best Creativity Award, 23rd Macronix Golden Silicon Awards, Macronix Education Foundation </li>
