--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
               <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
-              <p>My publications include two first-author papers in ISSCC and ESSCIRC and co-authored works in MICRO, ISICAS, TCAS-I, and SSC-L. I also have practical experience developing real-time chip and FPGA SoC platforms and leading digital VLSI tape-out projects in 40nm and 16nm. </p>
+              <p>I have a strong publication record as the first author of papers in top-tier conferences, such as ISSCC and ESSCIRC, and leading journals, including JSSC and IEEE Access. Additionally, I have co-authored several publications in other prestigious venues like MICRO, ISICAS, TCAS-I, and SSC-L. I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
               	<a href="https://scholar.google.com/citations?user=3uQ0CssAAAAJ&hl=zh-TW">Google Scholar</a> &nbsp/&nbsp
@@ -64,6 +64,24 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr onmouseout="ff_stop()" onmouseover="ff_start()">
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                      <papertitle> An Energy-Efficient CNN Processor Supporting Bi-Directional FPN for Small-Object Detection on High-Resolution Videos in 16nm FinFET  </papertitle>
+                    <br>
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Hui-Yun Tsai, Chun-Yeh Lin, Hao-Jiun Tu, Yu-Ching Su, Kai-Feng Chang, Tsung-Han Hsieh, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, Chao-Tsung Huang
+
+                    <br>
+                    <em> IEEE Journal of Solid-State Circuits (<strong>JSSC</strong>)</em>, accepted 
+                    
+                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> (Invited to attend the Demonstration Session in ISSCC 2025) </p>  
+                  <br>
+                   <br>
+                  <!-- <em><strong> (Top Journal of Solid-State Circuits)</strong></em> -->
+                  <br>
+                  <p></p>
+                  <!-- <p>We explore the </p> -->
+                </td>
+              </tr> 
   <tr onmouseout="ff_stop()" onmouseover="ff_start()">
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> A 16nm 5.7TOPS CNN Processor Supporting Bi-Directional FPN for Small-Object Detection on High-Resolution Videos  </papertitle>
@@ -296,7 +314,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last Update: Jun. 2025
+                Last Update: Oct. 2025
                 <br><br>
                 <a href="https://github.com/jonbarron/website">Website Template</a>
                 </p>
