--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <br>
                     <em> IEEE Journal of Solid-State Circuits (<strong>JSSC</strong>)</em>, accepted 
                     
-                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> (Invited to attend the Demonstration Session in ISSCC 2025) </p>  
+                  <p> <a href="https://www.youtube.com/watch?v=0XTT8wOi100"> Video record of the FPGA-aided chip demonstration system </a> </p> 
                   <br>
                    <br>
                   <!-- <em><strong> (Top Journal of Solid-State Circuits)</strong></em> -->
