--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> An Energy-Efficient CNN Processor Supporting Bi-Directional FPN for Small-Object Detection on High-Resolution Videos in 16nm FinFET  </papertitle>
                     <br>
-                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Hui-Yun Tsai, Chun-Yeh Lin, Hao-Jiun Tu, Yu-Ching Su, Kai-Feng Chang, Tsung-Han Hsieh, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, Chao-Tsung Huang
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Hui-Yun Tsai, Chun-Yeh Lin, Hao-Jiun Tu, Yu-Ching Su, Kai-Feng Chang, Tsung-Han Hsieh, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, and Chao-Tsung Huang
 
                     <br>
                     <em> IEEE Journal of Solid-State Circuits (<strong>JSSC</strong>)</em>, accepted 
@@ -86,7 +86,7 @@
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> A 16nm 5.7TOPS CNN Processor Supporting Bi-Directional FPN for Small-Object Detection on High-Resolution Videos  </papertitle>
                     <br>
-                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Chun-Yeh Lin, Hui-Yun Tsai, Hao-Jiun Tu, Kai-Feng Chang, Yu-Ching Su, Tsung-Han Hsieh, Yu-Kuan Jian, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, Chao-Tsung Huang
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Chun-Yeh Lin, Hui-Yun Tsai, Hao-Jiun Tu, Kai-Feng Chang, Yu-Ching Su, Tsung-Han Hsieh, Yu-Kuan Jian, Wen-Ching Chen, Nian-Shyang Chang, Chun-Pin Lin, Chi-Shi Chen, and Chao-Tsung Huang
 
                     <br>
                     <em> IEEE International Solid-State Circuits Conference (<strong>ISSCC</strong>)</em>, 2025 
@@ -104,7 +104,7 @@
                 <td style="padding:20px;width:75%;vertical-align:middle">
                       <papertitle> High-Fidelity Depth Map Reconstruction System With RGB-Guided Super Resolution CNN and Cross-Calibrated Chaos LiDAR  </papertitle>
                     <br>
-                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Pei-Rong Li, Chao-Tsung Huang, Yung-Chen Lin, Tsung Chen, Wei-Lun Lin, Cheng-Ting Lee, Fan-Yi Lin, Yuan-Hao Huang
+                    <strong>Yu-Chun Ding</strong>, Chia-Yu Chang, Pei-Rong Li, Chao-Tsung Huang, Yung-Chen Lin, Tsung Chen, Wei-Lun Lin, Cheng-Ting Lee, Fan-Yi Lin, and Yuan-Hao Huang
                     <br>
                     <em> IEEE Access</em>, 2025
                    <br>
