--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   Wei-Chen Lin, Wei-Jyun Chen, Shu-Yun Wu, Chao-Tsung Huang, Chun-Yeh Lin, Chia-Yu Chang, Meng-Jui Lee, 
                   Shimazu Tatsunori, Tsung Chen, Fan-Yi Lin, and Yuan-Hao Huang
                     <br>
-                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong>TCAS-I</strong>)</em>, 2022
+                    <em> IEEE Transactions on Circuits and Systems—I: Regular Papers (<strong>TCAS-I</strong>)</em>, 2022
                    <br>
                   <em> IEEE International Symposium on Integrated Circuits and Systems (<strong>ISICAS</strong>)</em>, 2022
                   <br>
@@ -171,7 +171,7 @@
                     <br>
                     Ching-Chen Wang, <strong>Yu-Chun Ding</strong>, Ching-Te Chiu, Chao-Tsung Huang, Yen-Yu Cheng, Shih-Yi Sun, Chih-Han Cheng, and Hsueh-Kai Kuo 
                     <br>
-                    <em> IEEE Transactions on circuits and systems—I: regular papers (<strong>TCAS-I</strong>)</em>, 2021
+                    <em> IEEE Transactions on Circuits and Systems—I: Regular Papers (<strong>TCAS-I</strong>)</em>, 2021
                    <br>
                   <p> <a href="https://www.youtube.com/watch?v=rANsdqSMz-g"> Pre-recorded video for the invited presentation in the 2022 VLSI Design/CAD Symposium </a> </p> 
                    <br>
