--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <p style="text-align:center">
                 <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
               </p>
-              <p>I am currently pursuing my PhD degree at National Tsing Hua University, advised by <a href="https://www.ee.nthu.edu.tw/chaotsung/index.html">Prof. Chao-Tsung Huang</a>. 
-                My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing and deep learning. </p>
+              <p>I recieved the BS degree in EECS and PhD degree in EE from National Tsing Hua University. 
+                My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing, computer vision, and deep learning applications.</p>
               <p>I have a strong publication record as the first author of papers in top-tier conferences, such as ISSCC and ESSCIRC, and leading journals, including JSSC and IEEE Access. Additionally, I have co-authored several publications in other prestigious venues like MICRO, ISICAS, TCAS-I, and SSC-L. I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
               <p style="text-align:center">
@@ -313,7 +313,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last Update: Oct. 2025
+                Last Update: Jan. 2026
                 <br><br>
                 <a href="https://github.com/jonbarron/website">Website Template</a>
                 </p>
