--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 
 
-  <title>Yu-Chun Ding (丁友鈞) </title>
+  <title>Yu-Chun Ting (丁友鈞) </title>
   
-  <meta name="author" content="Yu-Chun Ding (丁友鈞) ">
+  <meta name="author" content="Yu-Chun Ting (丁友鈞) ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -29,7 +29,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:64%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Yu-Chun Ding (丁友鈞) </name>&nbsp&nbsp;
+                <name>Yu-Chun Ting (丁友鈞) </name>&nbsp&nbsp;
               </p>
               <p>I recieved the BS degree in EECS and PhD degree in EE from National Tsing Hua University. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing, computer vision, and deep learning applications.</p>
@@ -58,7 +58,7 @@
           <table style="width:101%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-                <heading>Publications </heading>  
+                <heading>Publications (published as: Yu-Chun Ding) </heading>  
                 <!-- <p>(* indicates equal contribution)</p> -->
                 <ul>              
             </tr>
