--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           <table style="width:101%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-                <heading>Publications (published as: Yu-Chun Ding) </heading>  
+                <heading>Publications </heading>
+                <p>((published as: Yu-Chun Ding))</p>
+                 
                 <!-- <p>(* indicates equal contribution)</p> -->
                 <ul>              
             </tr>
