--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <heading>Publications </heading>
-                <p>((published as: Yu-Chun Ding))</p>
+                <p>(published as: Yu-Chun Ding)</p>
                  
                 <!-- <p>(* indicates equal contribution)</p> -->
                 <ul>              
